// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LiquidityMiningClient PTB shape populateClaimRewardAutoTransaction (deposit + borrow, multi-coin) — one claim+transfer per reward 1`] = `
[
  {
    "argumentCount": 6,
    "function": "claim_reward_as_coin",
    "kind": "MoveCall",
    "module": "liquidity_mining",
    "package": "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
  {
    "argumentCount": 6,
    "function": "claim_reward_as_coin",
    "kind": "MoveCall",
    "module": "liquidity_mining",
    "package": "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdeeb7a4662eec9f2f3def03fb937a663dddaa2e215b8078a284d026b7946c270::deep::DEEP",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
  {
    "argumentCount": 6,
    "function": "claim_reward_as_coin",
    "kind": "MoveCall",
    "module": "liquidity_mining",
    "package": "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LiquidityMiningClient PTB shape populateClaimRewardTransaction — claim_reward_as_coin + transfer to recipient 1`] = `
[
  {
    "argumentCount": 6,
    "function": "claim_reward_as_coin",
    "kind": "MoveCall",
    "module": "liquidity_mining",
    "package": "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;
